2006-12-23  Bruno Haible  <bruno@clisp.org>

	* gnulib-lib/Makefile.am (AM_CPPFLAGS): Define LIBXML_STATIC.
	Needed for mingw and cygwin.

2006-12-22  Bruno Haible  <bruno@clisp.org>

	* woe32dll/c++html-styled-ostream.cc: New file.
	* woe32dll/c++term-styled-ostream.cc: New file.

2006-12-21  Bruno Haible  <bruno@clisp.org>

	* gnulib-lib/Makefile.am: New file, partially taken from
	../gnulib-local/modules/gettext-tools-misc.

2006-12-21  Bruno Haible  <bruno@clisp.org>

	* woe32dll/gettextlib-exports.c: Export styled_ostream_typeinfo.
	* woe32dll/gettextsrc-exports.c: Export color_mode, style_file_name.

2006-12-10  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gt_LOCALE_JA.

2006-10-27  Bruno Haible  <bruno@clisp.org>

	Work around automake-1.10 annoyance.
	* Makefile.am (ACLOCAL): New macro.

2006-11-27  Bruno Haible  <bruno@clisp.org>

	* gettext-0.16.1 released.

2006-10-26  Bruno Haible  <bruno@clisp.org>

	* gettext-0.16 released.

2006-10-25  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Don't invoke AC_RELOCATABLE; now done through the
	relocwrapper and gettext-tools-libgettextpo-misc modules.

2006-10-25  Bruno Haible  <bruno@clisp.org>

	* configure.ac (DLL_VARIABLE): Define to empty if IN_RELOCWRAPPER is
	defined.

2006-10-20  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (ACLOCAL_AMFLAGS): Add -I libgettextpo/gnulib-m4.
	* configure.ac: Also invoke gtpo_EARLY, gtpo_INIT.

2006-10-18  Bruno Haible  <bruno@clisp.org>

	* woe32dll/gettextsrc-exports.c: Add {input,output}_format_*.

2006-10-16  Bruno Haible  <bruno@clisp.org>

	* libgettextpo: New directory.
	* Makefile.am (SUBDIRS): Add libgettextpo.
	* configure.ac (gt_GLOBAL_SYMBOL_PIPE): New macro.
	(AC_CONFIG_FILES): Add libgettextpo/Makefile, libgettextpo/exported.sh.

2006-10-15  Bruno Haible  <bruno@clisp.org>

	* woe32dll/gettextsrc-exports.c: Remove input_syntax.

2006-10-02  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (EXTRA_DIST): Add gnulib-m4/gnulib-cache.m4.
