@@ -1,5 +1,9 @@
 2006-12-23  Bruno Haible  <bruno@clisp.org>
 
+	* gnulib-lib/Makefile.am (libgettextlib_la_LINK): New variable.
+
+2006-12-23  Bruno Haible  <bruno@clisp.org>
+
 	* gnulib-lib/Makefile.am (AM_CPPFLAGS): Define LIBXML_STATIC.
 	Needed for mingw and cygwin.
 
